--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -8,7 +8,7 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "dev": "tsc -w",
-    "build": "tsc -p ."
+    "build": "swc src -d lib && tsc --emitDeclarationOnly"
   },
   "dependencies": {
     "@botmate/admin": "workspace:*",
@@ -18,7 +18,6 @@
     "@botmate/typescript-utils": "workspace:^1.0.0",
     "@botmate/utils": "workspace:*",
     "chalk": "4.1.2",
-    "chokidar": "^3.5.3",
     "commander": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -34,6 +33,8 @@
   },
   "devDependencies": {
     "@botmate/logger": "workspace:^4.8.2",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.42",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-serve-static-core": "^4.17.33",
@@ -41,7 +42,10 @@
     "@types/glob": "^8.1.0",
     "@types/lodash": "^4.14.191",
     "@types/morgan": "^1.9.4",
+    "chokidar": "^3.5.3",
+    "concurrently": "^7.6.0",
     "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22",
     "tiny-glob": "^0.2.9",
     "typescript": "4.9.5"
   }
