--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "apexcharts": "^3.37.2",
+    "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "browserslist-to-esbuild": "^1.2.0",
     "chalk": "4.1.2",
@@ -56,8 +57,10 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-hot-loader": "^4.13.1",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.9.0",
     "speed-measure-webpack-plugin": "^1.5.0",
