--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -35,6 +35,7 @@
     "@botmate/logger": "workspace:^4.8.2",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.42",
+    "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-serve-static-core": "^4.17.33",
@@ -47,6 +48,7 @@
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "tiny-glob": "^0.2.9",
+    "ts-node-dev": "^2.0.0",
     "typescript": "4.9.5"
   }
 }
