--- a/packages/core/helper-plugin/package.json
+++ b/packages/core/helper-plugin/package.json
@@ -1,8 +1,6 @@
 {
   "name": "@botmate/helper-plugin",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "module": "dist/index.mjs",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsup"
   },
