--- a/packages/shared/ui/package.json
+++ b/packages/shared/ui/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@botmate/helper-plugin": "workspace:*",
+    "@chakra-ui/anatomy": "^2.1.1",
     "@chakra-ui/react": "^2.5.3",
+    "@chakra-ui/styled-system": "^2.7.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
