--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -8,15 +8,12 @@
   "dependencies": {
     "@botmate/core": "workspace:*",
     "@botmate/plugin.telegram": "workspace:*",
-    "pg": "^8.10.0",
     "react": "^18.2.0"
   },
   "devDependencies": {
     "@botmate/types": "workspace:*",
     "@botmate/typescript-utils": "workspace:^1.0.0",
     "@types/node": "^18.15.7",
-    "@types/react": "^18.0.28",
-    "css-loader": "^6.7.3",
-    "style-loader": "^3.3.2"
+    "@types/react": "^18.0.28"
   }
 }
