--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@botmate/core": "workspace:^1.0.0",
     "@botmate/eslint-config": "workspace:^0.0.1",
     "@nrwl/nx-cloud": "latest",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.42",
     "@types/eslint": "^8.21.3",
     "eslint": "8.27.0",
     "nx": "15.8.9",
