--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -20,12 +20,12 @@
     "@botmate/types": "workspace:*",
     "@botmate/typescript-utils": "workspace:1.0.0",
     "@botmate/ui": "workspace:^1.0.0",
+    "@botmate/utils": "workspace:*",
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@loadable/component": "^5.15.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@swc/core": "^1.3.42",
     "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^11.0.1",
     "@types/lodash": "^4.14.191",
@@ -35,6 +35,7 @@
     "apexcharts": "^3.37.2",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
+    "bcrypt": "^5.1.0",
     "browserslist-to-esbuild": "^1.2.0",
     "chalk": "4.1.2",
     "chokidar": "^3.5.3",
@@ -52,9 +53,11 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "invariant": "^2.2.4",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.5",
     "moment": "^2.29.4",
+    "mongoose": "^7.0.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -67,6 +70,7 @@
     "style-loader": "^3.3.2",
     "swc-loader": "^0.2.3",
     "typescript": "4.9.5",
+    "vite-plugin-environment": "^1.1.3",
     "webpack": "^5.76.2",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
@@ -74,6 +78,10 @@
     "webpackbar": "^5.0.2"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.42",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/loadable__component": "^5.13.4",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
