--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -19,6 +19,7 @@
     "@botmate/scripts": "workspace:*",
     "@botmate/typescript-utils": "workspace:^1.0.0",
     "@botmate/utils": "workspace:*",
+    "bcrypt": "^5.1.0",
     "chalk": "4.1.2",
     "commander": "^10.0.0",
     "cors": "^2.8.5",
