--- a/packages/core/helper-plugin/package.json
+++ b/packages/core/helper-plugin/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/react": "^18.0.28",
+    "axios": "^1.3.4",
     "react": "^18.2.0"
   },
   "devDependencies": {
