--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -10,11 +10,6 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/runtime": "^7.20.13",
     "@botmate/eslint-config": "workspace:^0.0.1",
     "@botmate/helper-plugin": "workspace:*",
     "@botmate/types": "workspace:*",
@@ -25,7 +20,6 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@loadable/component": "^5.15.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^11.0.1",
     "@types/lodash": "^4.14.191",
@@ -36,26 +30,18 @@
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "bcrypt": "^5.1.0",
-    "browserslist-to-esbuild": "^1.2.0",
     "chalk": "4.1.2",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
-    "duplicate-dependencies-webpack-plugin": "^1.0.2",
-    "esbuild-loader": "^3.0.1",
     "fast-glob": "^3.2.12",
     "find-root": "^1.1.0",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "framer-motion": "^10.9.1",
     "fs-extra": "^11.1.1",
     "glob": "^9.3.1",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
     "invariant": "^2.2.4",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.7.5",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "react": "^18.2.0",
@@ -66,16 +52,8 @@
     "react-icons": "^4.8.0",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.9.0",
-    "speed-measure-webpack-plugin": "^1.5.0",
-    "style-loader": "^3.3.2",
-    "swc-loader": "^0.2.3",
     "typescript": "4.9.5",
-    "vite-plugin-environment": "^1.1.3",
-    "webpack": "^5.76.2",
-    "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "4.0.0",
-    "webpackbar": "^5.0.2"
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
